fix(permission-group): add price and currency to serializer
