# app/serializers/api/v1/permission_group_serializer.rb
@@ -1,9 +1,15 @@
 class Api::V1::PermissionGroupSerializer < Api::BaseSerializer
-  attributes  :id, :name, :permissions
+  include MoneyConcern
+
+  attributes :id, :name, :price, :permissions, :currency
 
   def permissions
     object.permission_group_permissions.map do |pgp|
       Api::V1::PermissionGroupPermissionSerializer.new(pgp)
     end
+  end
+
+  def currency
+    object.price_currency
   end
 end
