# swagger/v1/swagger.json
@@ -798,11 +798,21 @@
             "example": "Pro",
             "x-nullable": false
           },
+          "price": {
+            "type": "string",
+            "example": "29990.0",
+            "x-nullable": false
+          },
           "permissions": {
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/permission_group_permission"
             }
+          },
+          "currency": {
+            "type": "string",
+            "example": "USD",
+            "x-nullable": false
           }
         },
         "required": [
@@ -913,12 +923,12 @@
           },
           "price": {
             "type": "string",
-            "example": "USD",
+            "example": "1990.0",
             "x-nullable": false
           },
           "price_currency": {
             "type": "string",
-            "example": "Plutto Invoices",
+            "example": "USD",
             "x-nullable": false
           },
           "meter_count_method": {
